// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeCheckbox handles disabled state 1`] = `
<label
  className="checkbox-label disabled"
  data-disabled={true}
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "--checkbox-bg": "#ffffff",
      "--checkbox-bg-unchecked": "#ffffff",
      "--checkbox-border-checked": "1px solid #d5d5d5",
      "--checkbox-border-unchecked": "1px solid #d5d5d5",
      "--checkbox-checked-opacity": "0",
      "--checkbox-checkmark": "none",
      "--checkbox-color": "inherit",
      "--checkbox-disabled-border": "1px solid #d5d5d5",
      "--checkbox-disabled-color": "#e5e5e5",
      "--checkbox-font-weight": 400,
      "--checkbox-indeterminate-bg": "#026AA1",
      "--checkbox-indeterminate-icon": "url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 12 4\\" width=\\"12\\" height=\\"4\\"><path d=\\"M10.5.965a.75.75 0 0 1 .75.75v.75a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1-.75-.75v-.75a.75.75 0 0 1 .75-.75Z\\" fill=\\"%23fff\\"/></svg>')",
      "--checkbox-opacity": "0.4",
      "--checkbox-size": "1.6rem",
    }
  }
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="checkbox"
    />
  </span>
  <div
    className="checkbox-input"
    data-slot="selection"
  />
  Click Me
</label>
`;

exports[`TreeCheckbox handles indeterminate state 1`] = `
<label
  className="checkbox-label"
  data-indeterminate={true}
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "--checkbox-bg": "#026AA1",
      "--checkbox-bg-unchecked": "#ffffff",
      "--checkbox-border-checked": "1px solid #026AA1",
      "--checkbox-border-unchecked": "1px solid #6f6f6f",
      "--checkbox-checked-opacity": "1",
      "--checkbox-checkmark": "url('data:image/svg+xml,<svg height=\\"125px\\" width=\\"125px\\" version=\\"1.1\\" id=\\"Capa_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" viewBox=\\"0 0 17.837 17.837\\" xml:space=\\"preserve\\" fill=\\"%23000000\\"><g id=\\"SVGRepo_bgCarrier\\" stroke-width=\\"0\\"></g><g id=\\"SVGRepo_tracerCarrier\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></g><g id=\\"SVGRepo_iconCarrier\\"><g><path style=\\"fill:%23fff;\\" d=\\"M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27 c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0 L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z\\"></path></g></g></svg>')",
      "--checkbox-color": "inherit",
      "--checkbox-disabled-border": "1px solid #d5d5d5",
      "--checkbox-disabled-color": "#e5e5e5",
      "--checkbox-font-weight": 400,
      "--checkbox-indeterminate-bg": "#026AA1",
      "--checkbox-indeterminate-icon": "url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 12 4\\" width=\\"12\\" height=\\"4\\"><path d=\\"M10.5.965a.75.75 0 0 1 .75.75v.75a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1-.75-.75v-.75a.75.75 0 0 1 .75-.75Z\\" fill=\\"%23fff\\"/></svg>')",
      "--checkbox-opacity": "1",
      "--checkbox-size": "1.6rem",
    }
  }
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    className="checkbox-input"
    data-slot="selection"
  />
  Click Me
</label>
`;

exports[`TreeCheckbox handles options 1`] = `
<label
  className="checkbox-label"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "--checkbox-bg": "#ffffff",
      "--checkbox-bg-unchecked": "#ffffff",
      "--checkbox-border-checked": "1px solid #d5d5d5",
      "--checkbox-border-unchecked": "1px solid #d5d5d5",
      "--checkbox-checked-opacity": "1",
      "--checkbox-checkmark": "url('data:image/svg+xml,<svg height=\\"125px\\" width=\\"125px\\" version=\\"1.1\\" id=\\"Capa_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" viewBox=\\"0 0 17.837 17.837\\" xml:space=\\"preserve\\" fill=\\"%23000000\\"><g id=\\"SVGRepo_bgCarrier\\" stroke-width=\\"0\\"></g><g id=\\"SVGRepo_tracerCarrier\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></g><g id=\\"SVGRepo_iconCarrier\\"><g><path style=\\"fill:%235e5e5e;\\" d=\\"M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27 c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0 L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z\\"></path></g></g></svg>')",
      "--checkbox-color": "inherit",
      "--checkbox-disabled-border": "1px solid #d5d5d5",
      "--checkbox-disabled-color": "#e5e5e5",
      "--checkbox-font-weight": 700,
      "--checkbox-indeterminate-bg": "#026AA1",
      "--checkbox-indeterminate-icon": "url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 12 4\\" width=\\"12\\" height=\\"4\\"><path d=\\"M10.5.965a.75.75 0 0 1 .75.75v.75a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1-.75-.75v-.75a.75.75 0 0 1 .75-.75Z\\" fill=\\"%23fff\\"/></svg>')",
      "--checkbox-opacity": "1",
      "--checkbox-size": "2rem",
    }
  }
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    className="checkbox-input"
    data-slot="selection"
  />
  Click Me
</label>
`;

exports[`TreeCheckbox matches snapshot 1`] = `
<label
  className="checkbox-label"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "--checkbox-bg": "#026AA1",
      "--checkbox-bg-unchecked": "#ffffff",
      "--checkbox-border-checked": "1px solid #026AA1",
      "--checkbox-border-unchecked": "1px solid #6f6f6f",
      "--checkbox-checked-opacity": "1",
      "--checkbox-checkmark": "url('data:image/svg+xml,<svg height=\\"125px\\" width=\\"125px\\" version=\\"1.1\\" id=\\"Capa_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" viewBox=\\"0 0 17.837 17.837\\" xml:space=\\"preserve\\" fill=\\"%23000000\\"><g id=\\"SVGRepo_bgCarrier\\" stroke-width=\\"0\\"></g><g id=\\"SVGRepo_tracerCarrier\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></g><g id=\\"SVGRepo_iconCarrier\\"><g><path style=\\"fill:%23fff;\\" d=\\"M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27 c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0 L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z\\"></path></g></g></svg>')",
      "--checkbox-color": "inherit",
      "--checkbox-disabled-border": "1px solid #d5d5d5",
      "--checkbox-disabled-color": "#e5e5e5",
      "--checkbox-font-weight": 400,
      "--checkbox-indeterminate-bg": "#026AA1",
      "--checkbox-indeterminate-icon": "url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 12 4\\" width=\\"12\\" height=\\"4\\"><path d=\\"M10.5.965a.75.75 0 0 1 .75.75v.75a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1-.75-.75v-.75a.75.75 0 0 1 .75-.75Z\\" fill=\\"%23fff\\"/></svg>')",
      "--checkbox-opacity": "1",
      "--checkbox-size": "1.6rem",
    }
  }
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    className="checkbox-input"
    data-slot="selection"
  />
  Click Me
</label>
`;

exports[`TreeCheckbox supports slot="selection" 1`] = `
<label
  className="checkbox-label"
  data-rac=""
  data-react-aria-pressable={true}
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  slot="selection"
  style={
    Object {
      "--checkbox-bg": "#026AA1",
      "--checkbox-bg-unchecked": "#ffffff",
      "--checkbox-border-checked": "1px solid #026AA1",
      "--checkbox-border-unchecked": "1px solid #6f6f6f",
      "--checkbox-checked-opacity": "1",
      "--checkbox-checkmark": "url('data:image/svg+xml,<svg height=\\"125px\\" width=\\"125px\\" version=\\"1.1\\" id=\\"Capa_1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" viewBox=\\"0 0 17.837 17.837\\" xml:space=\\"preserve\\" fill=\\"%23000000\\"><g id=\\"SVGRepo_bgCarrier\\" stroke-width=\\"0\\"></g><g id=\\"SVGRepo_tracerCarrier\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"></g><g id=\\"SVGRepo_iconCarrier\\"><g><path style=\\"fill:%23fff;\\" d=\\"M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27 c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0 L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z\\"></path></g></g></svg>')",
      "--checkbox-color": "inherit",
      "--checkbox-disabled-border": "1px solid #d5d5d5",
      "--checkbox-disabled-color": "#e5e5e5",
      "--checkbox-font-weight": 400,
      "--checkbox-indeterminate-bg": "#026AA1",
      "--checkbox-indeterminate-icon": "url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 12 4\\" width=\\"12\\" height=\\"4\\"><path d=\\"M10.5.965a.75.75 0 0 1 .75.75v.75a.75.75 0 0 1-.75.75H1.5a.75.75 0 0 1-.75-.75v-.75a.75.75 0 0 1 .75-.75Z\\" fill=\\"%23fff\\"/></svg>')",
      "--checkbox-opacity": "1",
      "--checkbox-size": "1.6rem",
    }
  }
>
  <span
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
  >
    <input
      checked={false}
      data-react-aria-pressable={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="checkbox"
    />
  </span>
  <div
    className="checkbox-input"
    data-slot="selection"
  />
  Click Me
</label>
`;
